# benchmarks

./: .ycm_extra_conf.py  CMakeLists.txt  README.md  benchmark.json  conanfile.txt  rpclib benchmark results.ipynb  run_benchmarks.sh
idl/: capnp_service.capnp  grpc_service.proto  thrift_service.thrift
include/: generic_fixture.h  grpc_service.pb.h  port_numbers.h  target_code.h
include/capnp/: capnp_service.capnp.h  fixture.h  struct_helpers.h
include/direct/: fixture.h
include/grpc/: fixture.h  grpc_service.grpc.pb.h  grpc_service.pb.h  struct_helpers.h
include/rpclib/: fixture.h  struct_helpers.h
include/thrift/: ThriftServiceBenchmark.h  fixture.h  struct_helpers.h  thrift_service_constants.h  thrift_service_types.h
include/xmlrpc-c/: fixture.h
scripts/: run_codegens.sh
src/: benchmark.cc  grpc_service.pb.cc  target_code.cc
src/capnp/: capnp_service.capnp.c++  capnp_service.capnp.cc  struct_helpers.cc
src/grpc/: grpc_service.grpc.pb.cc  grpc_service.pb.cc  struct_helpers.cc
src/rpclib/: struct_helpers.cc
src/thrift/: ThriftServiceBenchmark.cpp  ThriftServiceBenchmark_server.skeleton.cpp  struct_helpers.cc  thrift_service_constants.cpp  thrift_service_types.cpp
